WIP gpt refactoring